New SCRIPT strategy